# SimplestMediaPlayer-LinkStart

./: CMakeLists.txt  README.md
src/: AudioDecoder.cpp  AudioDecoder.h  CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.h  VideoDecoder.cpp  VideoDecoder.h  main.cpp
